# ToyLanguage

./: .gitignore  CMakeLists.txt  test.txt
src/: ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
